GNOME Bugzilla – Bug 734321
srtpdec doesn't support RTP on the RTCP sink pad
Last modified: 2014-08-21 22:46:32 UTC
Created attachment 282610 [details] [review] srtpdec: Add support for RTP/RTCP mixing if data arrives on RTCP pad If we receive RTP and RTCP muxed into the same socket, it will work fine with rtpbin unless we use SRTP, in which case, it will only work if the RTP/RTCP is received on the rtp sink pad. If we receive the RTP on the rtcp sink pad, then srtpdec will not decode it. This use case is when using Farstream and using the same component_id for both rtp and rtcp nicesrc, the data could be received from either one of them. I've attached a patch to fix it.
Pushed commit 3c8039642448e7ad383b2cd588f54e396e1788a8 Author: Youness Alaoui <kakaroto@kakaroto.homelinux.net> Date: Tue Aug 5 14:06:07 2014 -0400 srtpdec: Add support for RTP/RTCP mixing if data arrives on RTCP pad https://bugzilla.gnome.org/show_bug.cgi?id=734321